--- a/src/index.css
+++ b/src/index.css
@@ -1,12 +1,28 @@
+*{
+  margin:0;
+  padding:0;
+  box-sizing:border-box;
+}
+html{
+  margin:0;
+  padding:0;
+  overflow-x:hidden;
+}
 body {
   margin: 0;
+  padding:0;
+  width:100%;
+  height:100%;
+ 
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif,'URW Chancery L';
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color:rgb(251,251,251) !important;
-  overflow-x: hidden;
+  box-sizing:border-box;
+ 
+  overflow-x: hidden !important;
 }
 
 code {
